--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jquery": "^3.6.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.6",
     "nodemon": "^1.19.4",
